# imgui-react-runtime

./: .gitignore  .npmignore  CLAUDE.md  CMakeLists.txt  Dockerfile.fedora42  Dockerfile.ubuntu2404  INSTALL.md  QUICKREF.md  README.md  bun.lockb  index.js  package-lock.json  package.json
cmake/: HermesExternal.cmake  embed_resource.cmake  hermes.cmake  macos_bundle_icon.cmake  react-imgui.cmake
doc/: TODO.md
examples/dynamic-windows/: app.jsx  index.js
examples/hello/: app.jsx  index.js
examples/showcase/: BouncingBall.jsx  ControlledWindow.jsx  StockTable.jsx  app.jsx  index.js
lib/imgui-runtime/: CMakeLists.txt  MappedFileBuffer.cpp  imgui-runtime.cpp  imgui-runtime.h
lib/imgui-unit/: renderer.js
lib/jslib-unit/: jslib.js  node-bridge.js  node-buffer.js  node-fs-promises.js  node-fs.js  node-os.js  node-path-posix.js  node-path-win32.js  node-path.js  node-stream-promises.js  node-stream.js
lib/react-imgui/: Appearance.js  Dimensions.js  Platform.js  StyleSheet.js  index.d.ts  index.js
lib/react-imgui-reconciler/: host-config.js  reconciler.js  tree-node.js
lib/react-imgui/native/: Alert.js  AppRegistry.js  index.d.ts  index.js
lib/react-imgui/node/: buffer.js  fs.js  os.js  path.js  stream.js
scripts/: bundle-react-unit.js
templates/: CMakeLists.txt  app.jsx  index.js  jsconfig.json
